--- a/accompany-consullting/src/app/entretient/entretient.component.html
+++ b/accompany-consullting/src/app/entretient/entretient.component.html
@@ -71,6 +71,8 @@
                   <mat-select formControlName="statut">
                     <mat-option value="GO">GO</mat-option>
                     <mat-option value="NOTGO">NOT GO</mat-option>
+                    <mat-option value="standby">Stand By</mat-option>
+
                   </mat-select>
                 </mat-form-field>
               </div>
