--- a/accompany-consullting/src/app/entretient/entretientdetail/entretientdetail.component.html
+++ b/accompany-consullting/src/app/entretient/entretientdetail/entretientdetail.component.html
@@ -18,9 +18,13 @@
                         <div class="fieldset-content">
 
                             <div class="col-md-4">
-                                <span
-                                    style="color: mediumslateblue; font-size: large; font-family: Georgia, 'Times New Roman', Times, serif;">{{post}}</span>
-                                <h4><span
+                                
+                              
+                                    <h4><span
+                                      style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Poste
+                                      : </span>{{post}}</h4>
+                              
+                                    <h4><span
                                         style="font-family: 'Times New Roman', Times, serif; color: mediumslateblue;">Description
                                         : </span>{{descriptionPoste}}</h4>
 
