--- a/accompany-consullting/src/app/home/home.component.html
+++ b/accompany-consullting/src/app/home/home.component.html
@@ -41,6 +41,28 @@
                     <div class="col-md-12"><label class="labels">Cin</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.cin}}"></div>
                     <div class="col-md-12"><label class="labels">Email</label><input type="text" class="form-control" placeholder="enter email id" value="{{user.mail}}"></div>
                     <div class="col-md-12"><label class="labels">Date de naissance</label><input type="text" class="form-control" placeholder="education" value="{{user.date_naissance| date:'dd-MM-yyyy'}}"></div>
+                    <br>
+
+                    <button class="btn btn-primary" (click)="togglePasswordFields()">Mettre à Jour le Mot de Passe</button>
+                           
+                       
+                    <div  *ngIf="showPasswordFields">
+                      
+                            <label class="labels">Ancien Mot de Passe</label>
+                            <input type="password" class="form-control" placeholder="Ancien mot de passe" [(ngModel)]="currentPassword">
+                    
+                        
+                            <label class="labels">Nouveau Mot de Passe</label>
+                            <input type="password" class="form-control" placeholder="Nouveau mot de passe" [(ngModel)]="newPassword">
+                 
+                     <br>
+                            <button class="btn btn-primary" (click)="updatePassword()">Confirmer le Mot de Passe</button>
+                        
+                    </div>
+               
+               
+               
+               
                 </div>
                 <div class="row mt-3">
 
@@ -60,7 +82,16 @@
                 <div class="col-md-12"><label class="labels">Fonction</label><input type="text" class="form-control" placeholder="additional details" value="{{user.fonction}}"></div>
                 <div class="col-md-12"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.code}}"></div>
                 <div class="col-md-12"><label class="labels">Date-integration</label><input type="text" class="form-control" placeholder="enter address line 2" value="{{user.date_integration| date:'dd-MM-yyyy'}}"></div>
-
+                <div class="col-md-5 border-right">
+                   
+                        <!-- ... Autres champs ... -->
+                      
+                           
+                    
+                        <!-- ... Autres champs ... -->
+                 
+                </div>
+                
             </div>
         </div>
     </div>
