--- a/accompany-consullting/src/app/conges/demande/demande.component.html
+++ b/accompany-consullting/src/app/conges/demande/demande.component.html
@@ -146,7 +146,7 @@
             <div class="row col-12 justify-content-center mb-4" style="margin-top: 2em;">
                 <div class="btn-group" role="group">
                     <button type="submit" class="btn btn-primary mr-2">
-                        <i class="fa fa-floppy-o" aria-hidden="true" (click)="submitDemandeConge('enregister')"></i> Enregistrer
+                        <i class="fa fa-floppy-o"  (click)="submitDemandeConge('enregister')"></i> Enregistrer
                     </button>
                     <button type="submit" mat-raised-button color="accent" class="mr-2" (click)="submitDemandeConge('envoyer')">
                         <i class="fa fa-paper-plane"></i> Envoyer la demande
