--- a/accompany-consullting/src/app/Mission/projet/projet.component.html
+++ b/accompany-consullting/src/app/Mission/projet/projet.component.html
@@ -22,13 +22,12 @@
  <button type="button"  class="btn btn-outline-info mr-2"  style=" border-radius: 10px;"(click)="loadInProgressMissions()">
   <i class="fa fa-unlock-alt"></i> En cours
 </button>
-<div class="col-1" *ngIf="role=== 'admin'">
+
 
 <button type="button" class="btn btn-outline-info mr-2" style="border-radius: 10px;"
         (click)="loadConsultants()" [disabled]="clique >= 1">
   <i class="fa fa-users"></i> Consultant
 </button>
-</div>
     
   </div>
 </div>
@@ -106,9 +105,10 @@
         <td>{{ consultant.grade }}</td>
 
         <td>
+          <div class="col-1" *ngIf="role=== 'admin'">
           <button type="button" class="  btn btn-success btn-sm mr-2" (click)="openConsultantEvaluationsDialog(consultant.id ,consultant.nom , consultant.prenom)">
             <i class="fa fa-eye"></i> Consulter
-          </button>
+          </button></div>
         </td>
         <!-- Ajoutez d'autres cellules de données si nécessaire -->
       </tr>
